; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_mt312.c_mt312_send_master_cmd.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_mt312.c_mt312_send_master_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.mt312_state* }
%struct.mt312_state = type { i32 }
%struct.dvb_diseqc_master_cmd = type { i32, i32* }

@EINVAL = common dso_local global i32 0, align 4
@DISEQC_MODE = common dso_local global i32 0, align 4
@DISEQC_INSTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, %struct.dvb_diseqc_master_cmd*)* @mt312_send_master_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mt312_send_master_cmd(%struct.dvb_frontend* %0, %struct.dvb_diseqc_master_cmd* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.dvb_frontend*, align 8
  %5 = alloca %struct.dvb_diseqc_master_cmd*, align 8
  %6 = alloca %struct.mt312_state*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %4, align 8
  store %struct.dvb_diseqc_master_cmd* %1, %struct.dvb_diseqc_master_cmd** %5, align 8
  %9 = load %struct.dvb_frontend*, %struct.dvb_frontend** %4, align 8
  %10 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %9, i32 0, i32 0
  %11 = load %struct.mt312_state*, %struct.mt312_state** %10, align 8
  store %struct.mt312_state* %11, %struct.mt312_state** %6, align 8
  %12 = load %struct.dvb_diseqc_master_cmd*, %struct.dvb_diseqc_master_cmd** %5, align 8
  %13 = getelementptr inbounds %struct.dvb_diseqc_master_cmd, %struct.dvb_diseqc_master_cmd* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %22, label %16

16:                                               ; preds = %2
  %17 = load %struct.dvb_diseqc_master_cmd*, %struct.dvb_diseqc_master_cmd** %5, align 8
  %18 = getelementptr inbounds %struct.dvb_diseqc_master_cmd, %struct.dvb_diseqc_master_cmd* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = sext i32 %19 to i64
  %21 = icmp ugt i64 %20, 8
  br i1 %21, label %22, label %25

22:                                               ; preds = %16, %2
  %23 = load i32, i32* @EINVAL, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %3, align 4
  br label %86

25:                                               ; preds = %16
  %26 = load %struct.mt312_state*, %struct.mt312_state** %6, align 8
  %27 = load i32, i32* @DISEQC_MODE, align 4
  %28 = call i32 @mt312_readreg(%struct.mt312_state* %26, i32 %27, i32* %8)
  store i32 %28, i32* %7, align 4
  %29 = load i32, i32* %7, align 4
  %30 = icmp slt i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %25
  %32 = load i32, i32* %7, align 4
  store i32 %32, i32* %3, align 4
  br label %86

33:                                               ; preds = %25
  %34 = load %struct.mt312_state*, %struct.mt312_state** %6, align 8
  %35 = load i32, i32* @DISEQC_INSTR, align 4
  %36 = or i32 128, %35
  %37 = load %struct.dvb_diseqc_master_cmd*, %struct.dvb_diseqc_master_cmd** %5, align 8
  %38 = getelementptr inbounds %struct.dvb_diseqc_master_cmd, %struct.dvb_diseqc_master_cmd* %37, i32 0, i32 1
  %39 = load i32*, i32** %38, align 8
  %40 = load %struct.dvb_diseqc_master_cmd*, %struct.dvb_diseqc_master_cmd** %5, align 8
  %41 = getelementptr inbounds %struct.dvb_diseqc_master_cmd, %struct.dvb_diseqc_master_cmd* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  %43 = call i32 @mt312_write(%struct.mt312_state* %34, i32 %36, i32* %39, i32 %42)
  store i32 %43, i32* %7, align 4
  %44 = load i32, i32* %7, align 4
  %45 = icmp slt i32 %44, 0
  br i1 %45, label %46, label %48

46:                                               ; preds = %33
  %47 = load i32, i32* %7, align 4
  store i32 %47, i32* %3, align 4
  br label %86

48:                                               ; preds = %33
  %49 = load %struct.mt312_state*, %struct.mt312_state** %6, align 8
  %50 = load i32, i32* @DISEQC_MODE, align 4
  %51 = load i32, i32* %8, align 4
  %52 = and i32 %51, 64
  %53 = load %struct.dvb_diseqc_master_cmd*, %struct.dvb_diseqc_master_cmd** %5, align 8
  %54 = getelementptr inbounds %struct.dvb_diseqc_master_cmd, %struct.dvb_diseqc_master_cmd* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 8
  %56 = sub nsw i32 %55, 1
  %57 = shl i32 %56, 3
  %58 = or i32 %52, %57
  %59 = or i32 %58, 4
  %60 = call i32 @mt312_writereg(%struct.mt312_state* %49, i32 %50, i32 %59)
  store i32 %60, i32* %7, align 4
  %61 = load i32, i32* %7, align 4
  %62 = icmp slt i32 %61, 0
  br i1 %62, label %63, label %65

63:                                               ; preds = %48
  %64 = load i32, i32* %7, align 4
  store i32 %64, i32* %3, align 4
  br label %86

65:                                               ; preds = %48
  %66 = call i32 @msleep(i32 100)
  %67 = load %struct.dvb_diseqc_master_cmd*, %struct.dvb_diseqc_master_cmd** %5, align 8
  %68 = getelementptr inbounds %struct.dvb_diseqc_master_cmd, %struct.dvb_diseqc_master_cmd* %67, i32 0, i32 1
  %69 = load i32*, i32** %68, align 8
  %70 = getelementptr inbounds i32, i32* %69, i64 0
  %71 = load i32, i32* %70, align 4
  %72 = and i32 %71, 2
  %73 = icmp ne i32 %72, 0
  br i1 %73, label %74, label %85

74:                                               ; preds = %65
  %75 = load %struct.mt312_state*, %struct.mt312_state** %6, align 8
  %76 = load i32, i32* @DISEQC_MODE, align 4
  %77 = load i32, i32* %8, align 4
  %78 = and i32 %77, 64
  %79 = call i32 @mt312_writereg(%struct.mt312_state* %75, i32 %76, i32 %78)
  store i32 %79, i32* %7, align 4
  %80 = load i32, i32* %7, align 4
  %81 = icmp slt i32 %80, 0
  br i1 %81, label %82, label %84

82:                                               ; preds = %74
  %83 = load i32, i32* %7, align 4
  store i32 %83, i32* %3, align 4
  br label %86

84:                                               ; preds = %74
  br label %85

85:                                               ; preds = %84, %65
  store i32 0, i32* %3, align 4
  br label %86

86:                                               ; preds = %85, %82, %63, %46, %31, %22
  %87 = load i32, i32* %3, align 4
  ret i32 %87
}

declare dso_local i32 @mt312_readreg(%struct.mt312_state*, i32, i32*) #1

declare dso_local i32 @mt312_write(%struct.mt312_state*, i32, i32*, i32) #1

declare dso_local i32 @mt312_writereg(%struct.mt312_state*, i32, i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
